tests/snapshots/integration_tests__import_strings_output.snap
---
source: tests/integration_tests.rs
assertion_line: 1580
expression: formatted
---
{
  "sourceLanguage" : "en",
  "strings" : {
    "common.ok" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "common.cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "common.save" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    }
  },
  "version" : "1.0"
}
