tests/snapshots/integration_tests__snapshot_roundtrip_formatting.snap
---
source: tests/integration_tests.rs
assertion_line: 231
expression: formatted
---
{
  "sourceLanguage" : "en",
  "strings" : {
    "greeting" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hello"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Привіт"
          }
        }
      }
    },
    "welcome_message" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome to the app"
          }
        }
      }
    }
  },
  "version" : "1.0"
}
