tests/snapshots/integration_tests__snapshot_untranslated_batch.snap
---
source: tests/integration_tests.rs
assertion_line: 466
expression: batch
---
[
  {
    "key": "greeting",
    "source_text": "Hello",
    "target_locale": "de",
    "format_specifiers": [],
    "has_plurals": false,
    "has_substitutions": false,
    "leaves": [
      {
        "path": [],
        "source_text": "Hello",
        "required": true,
        "complete": false,
        "substitutions": []
      }
    ],
    "diagnostics": []
  },
  {
    "key": "welcome_message",
    "source_text": "Welcome to the app",
    "target_locale": "de",
    "format_specifiers": [],
    "has_plurals": false,
    "has_substitutions": false,
    "leaves": [
      {
        "path": [],
        "source_text": "Welcome to the app",
        "required": true,
        "complete": false,
        "substitutions": []
      }
    ],
    "diagnostics": []
  }
]
